<resources>
    <string name="app_name">Bingo红包</string>
    <string name="accessibility_description">Bingo红包不会通过辅助服务收集用户任何隐私，请放心开启！</string>
    <string name="agreement">红包虽好，可不要贪多哦~</string>
    <string name="service_name">bingo</string>
    <string name="platform_mm">微信平台</string>
    <string name="platform_qq">QQ平台</string>
    <string name="bingo_enable">开启服务</string>
    <string name="base_settings">基本设置</string>
    <string name="advanced_settings">高级设置</string>
    <string name="service_enable">开启服务</string>
    <string name="mm_settings">基本设置</string>
    <string name="qq_settings">基本设置</string>
    <string name="notify_settings">红包提醒设置</string>
    <string name="thumbs_up">给个好评吧</string>
    <string name="micro_tools">小工具</string>
    <string name="share">分享~</string>
    <string name="share_content">发现红包神器一枚、简洁极速好用无广告、速来领取~ %s</string>
    <string name="auto_replay">自动回复设置</string>
    <string name="enable_auto_replay">开启自动回复</string>
    <string name="auto_replay_list">消息列表</string>
    <string name="random_replay">随机回复</string>
    <string name="qq_service_enable">QQ红包</string>
    <string name="mm_service_enable">微信红包</string>
    <string name="mm_mode_0">自动抢</string>
    <string name="mm_mode_1">只抢单聊红包，群聊红包提醒</string>
    <string name="mm_mode_2">只抢群聊红包，单聊红包提醒</string>
    <string name="mm_mode_3">通知手动抢（更安全）</string>
    <string name="qq_mode_0">自动抢</string>
    <string name="qq_mode_1">通知手动抢（更安全）</string>
    <string name="mm_mode_title">抢红包姿势</string>
    <string name="after_get_title">抢到红包后</string>
    <string name="after_open_title">拆开红包后</string>
    <string name="mm_after_get_mode_0">拆红包</string>
    <string name="mm_after_get_mode_1">静静的看着</string>
    <string name="mm_after_open_mode_0">返回桌面</string>
    <string name="mm_after_open_mode_1">静静的看着</string>
    <string name="mm_after_open_mode_2">自动回复消息</string>
    <string name="open_delayed_time">拆红包延迟时间</string>
    <string name="acc_able">静候红包ing...</string>
    <string name="acc_unable">请先开启辅助功能</string>
    <string name="tips_count">已经为您提醒%s个红包</string>
    <string name="help">来红包时无法正常提醒？</string>
    <string name="tools_qq">QQ点赞</string>
    <string name="reminder">温馨提示：使用%s后，会提升您抢红包的速度。但如果您手太快，姿势太迅猛，每次都率先抢到红包，有一定几率会被检测出使用了自动抢红包插件，影响您后面使用红包功能。所以，有时候，高抬贵手略控制节奏，抢红包风味更佳。红包虽好，可不要贪多哟～</string>
</resources>
