<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <View
        android:layout_width="match_parent"
        android:layout_height="80dp"/>
    <RelativeLayout
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_category_height"
        android:gravity="center_vertical"
        android:background="@drawable/custom_ripple"
        android:id="@+id/rl_enable_service">
        <TextView
            style="@style/TextBase"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/qq_service_enable"/>
        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:id="@+id/sw_enable_service" />
    </RelativeLayout>
    <View
        android:background="@color/gray_white"
        android:layout_width="match_parent"
        android:layout_height="8dp"/>
    <RelativeLayout
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_category_height"
        android:gravity="center_vertical"
        android:background="@drawable/custom_ripple"
        android:id="@+id/rl_qq_setting">
        <TextView
            style="@style/TextBase"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/qq_settings"/>
        <View
            android:layout_alignParentBottom="true"
            android:background="@color/span_line"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
    </RelativeLayout>
    <RelativeLayout
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_category_height"
        android:gravity="center_vertical"
        android:background="@drawable/custom_ripple"
        android:id="@+id/rl_auto_replay">
        <TextView
            style="@style/TextBase"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/auto_replay"/>
        <View
            android:layout_alignParentBottom="true"
            android:background="@color/span_line"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
    </RelativeLayout>
    <RelativeLayout
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_category_height"
        android:gravity="center_vertical"
        android:background="@drawable/custom_ripple"
        android:id="@+id/rl_notify_setting">
        <TextView
            style="@style/TextBase"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/notify_settings"/>
        <View
            android:layout_alignParentBottom="true"
            android:background="@color/span_line"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
    </RelativeLayout>
</LinearLayout>