<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">
            <View
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:visibility="visible"/>

            <RelativeLayout
                android:paddingLeft="@dimen/fragment_horizontal_margin"
                android:paddingRight="@dimen/fragment_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_category_height"
                android:gravity="center_vertical"
                android:background="@drawable/custom_ripple"
                android:id="@+id/rl_enable_service">
                <TextView
                    style="@style/TextBase"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawablePadding="8dp"
                    android:drawableLeft="@mipmap/warning_wechat"
                    android:text="@string/mm_service_enable"/>
                <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:id="@+id/sw_enable_service" />
            </RelativeLayout>

            <RelativeLayout
                android:paddingLeft="@dimen/fragment_horizontal_margin"
                android:paddingRight="@dimen/fragment_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_category_height"
                android:gravity="center_vertical"
                android:background="@drawable/custom_ripple"
                android:id="@+id/rl_enable_qq_service">
                <TextView
                    style="@style/TextBase"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawablePadding="8dp"
                    android:drawableLeft="@mipmap/warning_qq"
                    android:text="@string/qq_service_enable"/>
                <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:id="@+id/sw_enable_qq_service" />
            </RelativeLayout>
            <View
                android:background="@color/span_line_home"
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <RelativeLayout
                android:paddingLeft="@dimen/fragment_horizontal_margin"
                android:paddingRight="@dimen/fragment_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_category_height"
                android:gravity="center_vertical"
                android:background="@drawable/custom_ripple"
                android:id="@+id/rl_mm_setting">
                <TextView
                    style="@style/TextBase"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@mipmap/ic_settings"
                    android:drawablePadding="8dp"
                    android:text="@string/mm_settings"/>
                <View
                    android:layout_alignParentBottom="true"
                    android:background="@color/span_line"
                    android:layout_width="match_parent"
                    android:layout_height="1px"/>
            </RelativeLayout>
            <RelativeLayout
                android:paddingLeft="@dimen/fragment_horizontal_margin"
                android:paddingRight="@dimen/fragment_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_category_height"
                android:gravity="center_vertical"
                android:background="@drawable/custom_ripple"
                android:id="@+id/rl_auto_replay">
                <TextView
                    style="@style/TextBase"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@mipmap/ic_replay"
                    android:drawablePadding="8dp"
                    android:text="@string/auto_replay"/>
                <View
                    android:layout_alignParentBottom="true"
                    android:background="@color/span_line"
                    android:layout_width="match_parent"
                    android:layout_height="1px"/>
            </RelativeLayout>
            <RelativeLayout
                android:paddingLeft="@dimen/fragment_horizontal_margin"
                android:paddingRight="@dimen/fragment_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_category_height"
                android:gravity="center_vertical"
                android:background="@drawable/custom_ripple"
                android:id="@+id/rl_notify_setting">
                <TextView
                    style="@style/TextBase"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@mipmap/ic_notify"
                    android:drawablePadding="8dp"
                    android:text="@string/notify_settings"/>
                <View
                    android:visibility="gone"
                    android:layout_alignParentBottom="true"
                    android:background="@color/span_line"
                    android:layout_width="match_parent"
                    android:layout_height="1px"/>
            </RelativeLayout>
            <View
                android:background="@color/span_line_home"
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <RelativeLayout
                android:paddingLeft="@dimen/fragment_horizontal_margin"
                android:paddingRight="@dimen/fragment_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_category_height"
                android:gravity="center_vertical"
                android:background="@drawable/custom_ripple"
                android:id="@+id/rl_tools">
                <TextView
                    style="@style/TextBase"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@mipmap/ic_tools"
                    android:drawablePadding="8dp"
                    android:text="@string/micro_tools"/>
            </RelativeLayout>
            <View
                android:background="@color/span_line_home"
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <RelativeLayout
                android:paddingLeft="@dimen/fragment_horizontal_margin"
                android:paddingRight="@dimen/fragment_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_category_height"
                android:gravity="center_vertical"
                android:background="@drawable/custom_ripple"
                android:id="@+id/rl_thumbs_up">
                <TextView
                    style="@style/TextBase"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@mipmap/ic_thumbs_up"
                    android:drawablePadding="8dp"
                    android:text="@string/thumbs_up"/>
                <View
                    android:visibility="visible"
                    android:layout_alignParentBottom="true"
                    android:background="@color/span_line"
                    android:layout_width="match_parent"
                    android:layout_height="1px"/>
            </RelativeLayout>
            <RelativeLayout
                android:paddingLeft="@dimen/fragment_horizontal_margin"
                android:paddingRight="@dimen/fragment_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_category_height"
                android:gravity="center_vertical"
                android:background="@drawable/custom_ripple"
                android:id="@+id/rl_share">
                <TextView
                    style="@style/TextBase"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@mipmap/ic_share"
                    android:drawablePadding="8dp"
                    android:text="@string/share"/>
                <View
                    android:visibility="gone"
                    android:layout_alignParentBottom="true"
                    android:background="@color/span_line"
                    android:layout_width="match_parent"
                    android:layout_height="1px"/>
            </RelativeLayout>

            <View
                android:background="@color/span_line_home"
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:id="@+id/tv_reminder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size_small"
                android:text="@string/reminder"
                android:padding="@dimen/fragment_horizontal_margin"
                android:visibility="visible"/>
            <TextView
                android:id="@+id/tv_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:autoLink="all"
                android:textColor="@color/colorPrimary"
                android:paddingRight="@dimen/fragment_horizontal_margin"
                android:layout_gravity="end"
                android:visibility="visible"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>